feat: method inject